[package]
name = "esp-idf-hal"
version = "0.41.2"
authors = ["sapir <yasapir@gmail.com>", "Ivan Markov <ivan.markov@gmail.com>"]
edition = "2018"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["hal", "idf", "esp-idf", "esp32"]
description = "A Hardware abstraction layer for Espressif's ESP family of microcontrollers based on the ESP-IDF framework."
repository = "https://github.com/esp-rs/esp-idf-hal"
license = "MIT OR Apache-2.0"
readme = "README.md"
links = "esp_idf_hal"
build = "build.rs"
documentation = "https://esp-rs.github.io/esp-idf-hal/"
rust-version = "1.71"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }

[features]
default = ["std", "native", "binstart"]
std = ["alloc", "esp-idf-sys/std", "edge-executor?/std"]
alloc = []
nightly = ["embedded-hal-async", "embedded-io-async"]
esp-idf-sys = ["dep:esp-idf-sys", "atomic-waker"]
riscv-ulp-hal = []
embassy-sync = [] # Only for backwards compatibility

# Propagated esp-idf-sys features
native = ["esp-idf-sys/native"]
pio = ["esp-idf-sys/pio"]
alloc_handler = ["esp-idf-sys/alloc_handler"]
panic_handler = ["esp-idf-sys/panic_handler"]
binstart = ["esp-idf-sys/binstart"]
libstart = ["esp-idf-sys/libstart"]

[dependencies]
nb = "1.0.0"
embedded-can = "0.4.1"
embedded-hal = "=1.0.0-rc.1"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-nb = "=1.0.0-rc.1"
embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
embedded-io = "0.5"
embedded-io-async = { version = "0.5", optional = true }
esp-idf-sys = { version = "0.33", optional = true, default-features = false, features = ["native"] }
critical-section = { version = "1.1.1", optional = true }
heapless = "0.7"
num_enum = { version = "0.7", default-features = false }
enumset = { version = "1", default-features = false }
atomic-waker = { version = "1.1.1", optional = true, default-features = false }
embassy-sync = { version = "0.2" }
edge-executor = { version = "0.3", optional = true, default-features = false }

[build-dependencies]
embuild = "0.31.3"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.33", features = ["native", "binstart"] }
mipidsi = "0.5.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
