[package]
name = "esp-idf-hal"
version = "0.42.5"
authors = ["sapir <yasapir@gmail.com>", "Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["hal", "idf", "esp-idf", "esp32"]
description = "A Hardware abstraction layer for Espressif's ESP family of microcontrollers based on the ESP-IDF framework."
repository = "https://github.com/esp-rs/esp-idf-hal"
license = "MIT OR Apache-2.0"
readme = "README.md"
links = "esp_idf_hal"
build = "build.rs"
documentation = "https://esp-rs.github.io/esp-idf-hal/"
rust-version = "1.75"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }

[features]
default = ["std", "binstart"]
std = ["alloc", "esp-idf-sys/std"]
alloc = []
nightly = []
wake-from-isr = [] # Only enable if you plan to use the `edge-executor` crate
embassy-sync = [] # For now, the dependecy on the `embassy-sync` crate is non-optional, but this might change in future

# Propagated esp-idf-sys features
native = ["esp-idf-sys/native"]
pio = ["esp-idf-sys/pio"]
alloc_handler = ["esp-idf-sys/alloc_handler"]
panic_handler = ["esp-idf-sys/panic_handler"]
binstart = ["esp-idf-sys/binstart"]
libstart = ["esp-idf-sys/libstart"]

[dependencies]
nb = "1"
embedded-can = "0.4.1"
embedded-hal = "1"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-nb = "1"
embedded-hal-async = "1"
embedded-io = "0.6"
embedded-io-async = "0.6"
esp-idf-sys = { version = "0.33.7", default-features = false }
critical-section = { version = "1.1.1", optional = true, features = ["restore-state-none"] }
heapless = "0.8"
num_enum = { version = "0.7", default-features = false }
enumset = { version = "1.1", default-features = false }
log = { version = "0.4", default-features = false }
atomic-waker = { version = "1.1.1", default-features = false }
embassy-sync = { version = "0.5" }

[build-dependencies]
embuild = "0.31.3"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.33", features = ["native", "binstart"] }
mipidsi = "0.5.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
